6.8.9
[fix] my subscriptions section using YouTube RSS |contrib: PureHemp|
[fix] items per page settings on Kodi 19
[chg] recommendations only available for users with custom history playlist id configured
[rem] remove usage of discontinued api and dual login (no longer required)

6.8.8
[fixup] encoding of subtitle track names

6.8.7
[fixup] encoding of titles and authors during playback

6.8.6
[fix] some videos failing to play with an Invalid URL exception
[fix] searching in some instances with encoding issues |contrib: tsaklidis|
[fix] support python 3.9 html.unescape |contrib: asavah|

6.8.5
[fix] playback of purchased movies |contrib: MisterD81|
[fix] notifications for some languages on Kodi 19
[fix] searching for some languages
[fix] loading on some versions of python 3
[fix] some videos failing to play with an Invalid URL exception
[upd] use xbmcvfs.translatePath if available, clean up for Kodi 19

6.8.4
[fix] next page now ignores sorting, remains at the end of the directory
[fix] searching, no longer require remote safe search
[fix] notifications for some languages
[chg] only log http server ping failures
[lang] zh_cn strings |contrib: yureng, xiaojun|

6.8.3
[fix] playback of some videos
[fix] notifications for some languages |contrib: Mutronics|
[fix] fix rating videos causing and error even though it succeeded
[upd] cache javascript player url for4 hours, reduces http requests per play by 1
[upd] use new settings format on Kodi 19
[lang] el_gr strings |contrib: twilight0|
[lang] hu_hu strings |contrib: thelacesz|

6.8.2
[fixup] recommendations with > 50 channels

6.8.1
[fix] playback failing
[fix] viewing comments when logged in
[fix] intermittent issue with Subscriptions
[fix] encoding of video unavailable messages
[upd] updates to recommendations
[upd] update logging for Kodi 19
[lang] fr_fr strings |contrib: alan7000|
[lang] pl_pl strings |contrib: drrak|
[lang] nl_nl strings |contrib: Markman-B|

6.8.0