@@ -298,7 +298,7 @@ class PlaybackMonitorThread(threading.Thread):
                 if settings.get_bool('youtube.playlist.watchlater.autoremove', True):
                     watch_later_id = access_manager.get_watch_later_id()
 
-                    if watch_later_id and watch_later_id.strip().lower() != 'wl':
+                    if watch_later_id:
                         playlist_item_id = \
                             client.get_playlist_item_id_of_video_id(playlist_id=watch_later_id, video_id=self.video_id)
                         if playlist_item_id:
